Fix navbar on mobile (Closes #9)

--- a/src/views/dashboard/style.css
+++ b/src/views/dashboard/style.css
@@ -2,13 +2,18 @@
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 @import url(~toastr/toastr.scss);
 
+/* MOBILE */
 @media screen and (max-width: 768px) {
-  .header {
-    padding-top: 0.75rem !important;
-    padding-bottom: 0.75rem !important;
-    padding-right: 0.75rem !important;
+  .dropdowns-pc {
+    display: none !important;
   }
-  .menu-collapse {
+}
+
+/* PC */
+@media screen and (min-width: 768px) {
+  .header-mobile {
     display: none;
   }
 }
+
+
